--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <script src="script.js"></script>
     <title>People Counter</title>
 </head>
-<body>
-    
-</body>
+  <body>
+        <h1>People entered:</h1>
+        <h2 id="count-el">0</h2>
+    </body>
 </html>
