added p tag to html

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
 <button id="save-btn" onclick="save()">SAVE</button>
         <button id="resetButton" onclick="reset()">Reset</button>
+        <p id="save-el">Previous entires: </p>
     </body>
 </html>
