--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <h2 id="count-el">0</h2>
         <button id="increment-btn" onclick="increment()">INCREMENT</button>
 <button id="save-btn" onclick="save()">SAVE</button>
-        <button id="resetButton" onclick="reset()">Reset</button>
+        <button id="resetButton" onclick="reset()">Reset Counter</button>
+        <button id="resetSave">Reset Save</button>
         <p id="save-el">Previous entires: </p>
     </body>
 </html>
