--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <button id="save-btn" onclick="save()">SAVE</button>
     <button id="resetButton" onclick="reset()">Reset Counter</button>
     <button id="resetSave" onclick="resetSavedText()">Reset Entries</button>
-    <p id="save-el">Previous entires:</p>
+    <p id="save-el">Previous Entries :</p>
   </body>
 </html>
