--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
   <body>
     <h1>People entered:</h1>
     <h2 id="count-el">0</h2>
-    <button id="increment-btn" onclick="increment()">INCREMENT</button>
-    <button id="decrement-btn" onclick="decrement()">DECREMENT</button>
-    <button id="save-btn" onclick="save()">SAVE</button>
-    <button id="resetButton" onclick="reset()">Reset Counter</button>
-    <button id="resetSave" onclick="resetSavedText()">Reset Entries</button>
+    <div class="button-container">
+      <div class="increment-decrement">
+        <button id="increment-btn" onclick="increment()">INCREMENT</button>
+        <button id="decrement-btn" onclick="decrement()">DECREMENT</button>
+      </div>
+      <button id="save-btn" onclick="save()">SAVE</button>
+      <div class="reset-buttons">
+        <button id="resetButton" onclick="reset()">Reset Counter</button>
+        <button id="resetSave" onclick="resetSavedText()">Reset Entries</button>
+      </div>
+    </div>
     <p id="save-el">Previous Entries :</p>
   </body>
 </html>
